moving stuff around and fixing index

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 theme: jekyll-theme-minimal
 title: Personal website
 markdown: kramdown
-logo: assets/Images/bob.jpg
+logo: assets/img/bob.jpg
 author: Sam Albanese
 description: 
   Undergraduate studying Computer Science at St Marys College of Maryland <br/>
-  <a href="mailto:samuelpalbanese@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/spalby/">LinkedIn</a> | <a href="https://www.instagram.com/samapplebees/">Instagram</a>
+  Focus in Software Development<br/>
+  <a href="mailto:samuelpalbanese@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/spalby/">LinkedIn</a> | <a href="https://www.instagram.com/samapplebees/">Instagram</a> <a class="fab fa-github-square fa-3x" href="https://www.github.com/spalby/"></a>
