--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ author: Sam Albanese
 description: 
   Undergraduate studying Computer Science at St Marys College of Maryland <br/>
   Focus in Software Development<br/>
-  <a href="mailto:samuelpalbanese@gmail.com">Email</a> | <a class="fab fa-linkedin-square fa-3x" href="https://www.linkedin.com/in/spalby/">LinkedIn</a> | <a class="fab fa-instagram-square fa-3x" href="https://www.instagram.com/samapplebees/">Instagram</a> <a class="fab fa-github-square fa-3x" href="https://www.github.com/spalby/"></a>
+  <a class="fab fa-envelope-square fa-2x" href="mailto:samuelpalbanese@gmail.com"></a> | <a class="fab fa-linkedin-square fa-2x" href="https://www.linkedin.com/in/spalby/"></a> | <a class="fab fa-instagram-square fa-2x" href="https://www.instagram.com/samapplebees/"></a> <a class="fab fa-github-square fa-2x" href="https://www.github.com/spalby/"></a>
