--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ author: Sam Albanese
 description: 
   Undergraduate studying Computer Science at St Marys College of Maryland <br/>
   Focus in Software Development<br/>
-  <a class="fa fa-envelope fa-3x" href="mailto:samuelpalbanese@gmail.com"></a> &nbsp; <a class="fab fa-linkedin fa-3x" href="https://www.linkedin.com/in/spalby/"></a> &nbsp; <a class="fab fa-instagram-square fa-3x" href="https://www.instagram.com/samapplebees/"></a> &nbsp; <a class="fab fa-github-square fa-3x" href="https://www.github.com/spalby/"></a>
+  <a class="fa fa-envelope-square fa-3x" href="mailto:samuelpalbanese@gmail.com"></a> &nbsp; <a class="fab fa-linkedin fa-3x" href="https://www.linkedin.com/in/spalby/"></a> &nbsp; <a class="fab fa-instagram-square fa-3x" href="https://www.instagram.com/samapplebees/"></a> &nbsp; <a class="fab fa-github-square fa-3x" href="https://www.github.com/spalby/"></a>
