--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-- jekyll-remote-theme
+jekyll-remote-theme
 title: Samuel Albanese
 markdown: kramdown
 logo: 
