--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-jekyll-remote-theme
+plugins: jekyll-remote-theme
 title: Samuel Albanese
 markdown: kramdown
 logo: 
