--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: pages-themes/minimal@v0.2.0
-plugins: jekyll-remote-theme
+remote_theme: jekyll-remote-theme
+plugins: 
 title: Samuel Albanese
 markdown: kramdown
 logo: 
